fixed some text sizing and spacing

--- a/purpleandbold/src/components/About/about.module.sass
+++ b/purpleandbold/src/components/About/about.module.sass
@@ -70,7 +70,7 @@ section.aboutsection
         flex-direction: column
         justify-content: center
         width: 76%
-        font-size: .9em
+        // font-size: .9em
         line-height: 1.45em
         font-weight: $light
         @include edgesnap 
