--- a/purpleandbold/src/components/Services/ServiceImages/brandingimage.sass
+++ b/purpleandbold/src/components/Services/ServiceImages/brandingimage.sass
@@ -6,22 +6,21 @@ div
     justify-content: space-between
     width: 300px 
     height: 160px
-    @include tablet 
-      width: 100% 
+    @include tablet  
       height: 140px
     @include phone-small
       width: 100% 
     &__left, &__middle 
       width: 28%
-      @include tablet 
-        width: 31%
-      @include phone-small 
-        width: 30%
+      // @include tablet 
+      //   width: 31%
+      // @include phone-small 
+      //   width: 30%
     &__right
       height: 100% 
       width: 28%
-      @include phone-small 
-        width: 30%
+      // @include phone-small 
+      //   width: 30%
     &__left
       display: flex
       flex-direction: column
