--- a/purpleandbold/src/components/Services/ServiceImages/creativeimage.sass
+++ b/purpleandbold/src/components/Services/ServiceImages/creativeimage.sass
@@ -7,8 +7,8 @@ div
     width: 300px
     justify-content: space-between
     margin-bottom: 3px
-    @include tablet 
-      width: 100%
+    // @include tablet 
+    //   width: 100%
     &--color 
       border-radius: 2px
       box-shadow: 0px 0px 6px 3px rgba(218,218,218,0.6)
