--- a/purpleandbold/src/components/Services/serviceblock.sass
+++ b/purpleandbold/src/components/Services/serviceblock.sass
@@ -14,12 +14,12 @@
   &__left 
     align-self: center
     justify-self: center
-    // background: yellow
     width: 300px
     height: 220px
     @include tablet 
       width: 260px
     @include tablet-phone 
+      height: auto
       align-self: flex-start
       width: 300px
     @include phone-large 
@@ -29,6 +29,7 @@
     &, h3 
       @include tablet-phone 
         margin-bottom: 1.1em
+        font-size: 1.3em
     h3 
       margin-bottom: 0.4em
       @include tablet-phone 
@@ -62,6 +63,8 @@
       h4 
         //must be same as img
         margin-bottom: .275em
+        @include tablet-phone 
+          font-size: 1.4em
       p 
         margin-bottom: .75em
 
