--- a/purpleandbold/src/components/base.sass
+++ b/purpleandbold/src/components/base.sass
@@ -38,8 +38,10 @@ html
     font-weight: 300
     //underline?
   p 
-    font-size: 0.9325em
+    font-size: 0.925em
     font-weight: 300
+    @include tablet-phone 
+      font-size: 1em
   body 
     width: 100%
 //overall layout styling
